version 1.9.12, in progress
- "markers" command: add support for the panel-data case
  where the number of markers equals the number of cross-
  sectional units
- "delete" command: add option to delete all variables of a
  specified type
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one
- Add new function strstrip()
- lags() function: add an optional third parameter to control
  the ordering of terms in the output list
- Improve structural integrity of model specification dialog
  (it now behaves properly on resizing)
- Gnuplot version: require 4.4.0 (March 2010) or higher
- GUI preferences dialog: add facility to set the default scale
  for PNG plots
- GUI Tools menu: add an item to launch an interactive gnuplot
  session
- Fix bug: transient objects created within functions were 
  appearing in the GUI icon view window
- User's Guide: clarify the use of string substitution, plus
  various small updates

2012-11-21 version 1.9.11
- Substantial re-write of code for handling named variables
  other than series (matrices, scalars, strings, etc.) in the
  interest of maintainability and efficiency
- "restrict" command: try to ensure that standard errors show
  as zero when they are in principle zero
- "loop": support use of $-substitution in the expression that
  controls a nested loop
- Fix bug: spurious detection of line continuation characters
  in #-style comments that do not start a command line
- Fix bug: "eval" not working correctly for anonymous strings
- Fix build bug: "make check" not working properly
- Fix build bug: XDG (desktop) files not getting installed in
  a manner suitable for packagers of gretl
- Support a matrix as an element-wise boolean condition for the 
  ternary "?" operator
- The msortby() function: ensure that it performs a "stable" 
  sort, such that rows sharing a common key value are never 
  interchanged
- The inbundle() function: return a code that identifies the