@@ -594,6 +594,15 @@
   pages =	 {1029--1054}
 }
 
+@Article{hansen97,
+  author =	 {Hansen, B. E.},
+  year =	 1997,
+  title =	 {Approximate Asymptotic P Values for Structural-Change Tests},
+  journal =	 {Journal of Business \& Economic Statistics},
+  volume =	 15,
+  pages =	 {60--67}
+}
+
 @Article{hansen-singleton82,
   author =	 {Hansen, L. P. and Singleton, K. J.},
   year =	 1982,
