@@ -4,6 +4,8 @@ version 1.9.12, in progress
   sectional units
 - "delete" command: add option to delete all variables of a
   specified type
+- "qlrtest" command: compute asymptotic p-value as per Bruce
+  Hansen's method (1997)
 - You can now use "bundle b = null" to create a new bundle or
   empty an existing one
 - Add new function strstrip()
